optimize profile argLine